# vlm

./: .dockerignore  .env.example  .gitignore  .gitlint  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  config.toml  delrec.py  filter.py  main.py  mkdocs.yml  parseline.py  parseline.py.old  pyproject.toml  pyrightconfig.json  requirements.txt  ruff.toml  setup.py  static.py  test.py  vlm.py  vlm.py.old  vlm2.py  vlm3.py  vlm4.py
datas/: vlm.tar.bz2
doc/: glossaire.md  index.md
doc/build_json/: business_rules.md
doc/clean_report/: business_rules.md
doc/dev/: index.md  installation.md  makefile.md  qualite.md  tests.md
doc/docker/: cross_build.md  index.md  linux.md  macos.md  zcx_deploiement.md  zcx_presentation.md
doc/export_csv/: filtres.md  guide.md  jq.md
doc/extract_copt/: business_rules.md
doc/inspect_copt/: business_rules.md
doc/mkdocs/: guide.md
doc/pipeline/: business_rules.md
doc/reformat_copt/: business_rules.md
doc/stylesheets/: extra.css
script/: export_csv.sh  serve_docs.sh
src/: build_json.py  clean_report.py  extract_copt.py  inspect_copt.py  pipeline.py  reformat_copt.py  utils.py
test_suites/: test_suites.tar.bz2
vlm/: loadlibs_parser.py
vlm/utils/: file_handler.py
vlm/utils/git/hooks/: pre-commit
vlm_parser/: args_handler.py  csv_writer.py  error_handler.py  file_reader.py  main.py  structures.py  utils.py
