[project]
name = "vlm"
version = "0.1.0"
description = "Pipeline ETL de transformation des rapports IBM File Manager (VLM) en JSON/CSV."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mypy>=1.13",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
