[project]
name = "vlm"
version = "0.1.0"
description = "Pipeline ETL de transformation des rapports IBM File Manager (VLM) en JSON/CSV."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-awesome-pages-plugin>=2.9",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
    "mkdocs-include-markdown-plugin>=6.0",
    "mkdocs-macros-plugin>=1.0",
    "mkdocs-material>=9.7.6",
    "mkdocs-minify-plugin>=0.8",
    "mypy>=1.13",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
